@startuml

abstract class Parcela{
# posicion:Coordenada
+ construirDefensa(Defensa defensa)
+ actualizarUbicacion(Movimiento movimientoEnemigo)
+ estaEnRango(Coordenada otraCoordenada, int distancia):Boolean
+ ocupada():Boolean
+ setConstruible(Construible nuevoConstruible)
}

class Rocosa{}
class Tierra{}
class Pasarela{
+ verSiguiente():Pasarela
}

interface TipoPasarela{
+ moverEnemigos(Movimiento tipoMovimiento, Pasarela pasarelaActual);
}

class Normal{}
class Meta{}

interface Construible{
+ construir(Coordenada posicionParcela, Defensa defensaContruir, Parcela parcela)
}

class DisponibleAtaque{}
class NoDisponible{}
class DisponibleTrampa{}

TipoPasarela <|.. Normal
TipoPasarela <|.. Meta
TipoPasarela <- Pasarela

Parcela -> Construible

Parcela <|-- Rocosa
Parcela <|-- Tierra
Parcela <|-- Pasarela

DisponibleAtaque ..|> Construible
DisponibleTrampa ..|> Construible
NoDisponible ..|> Construible

@enduml